infrastructure/base/controllers/kube-prometheus-stack/grafana-plugins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-grafana-plugins
  labels:
    app.kubernetes.io/name: swpt-http-server
    app.kubernetes.io/instance: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: swpt-http-server
      app.kubernetes.io/instance: prometheus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: swpt-http-server
        app.kubernetes.io/instance: prometheus
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/name: swpt-http-server
                app.kubernetes.io/instance: prometheus
            topologyKey: kubernetes.io/hostname
            matchLabelKeys:
            - pod-template-hash
      priorityClassName: critical-monitoring
      imagePullSecrets:
        - name: regcreds
      containers:
        - name: server
          image: swpt-http-server
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: "1"
              memory: 32Mi

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-grafana-plugins
  labels:
    app.kubernetes.io/name: swpt-http-server
    app.kubernetes.io/instance: prometheus
spec:
  selector:
    app.kubernetes.io/name: swpt-http-server
    app.kubernetes.io/instance: prometheus
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
