infrastructure/base/controllers/kube-prometheus-stack/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: forbid-pods-internet-access
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/8
    - ipBlock:
        cidr: 172.16.0.0/12
    - ipBlock:
        cidr: 192.168.0.0/16

---
# The Alertmanager's pods need to be able send emails to an SMTP
# server.
#
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-alertmanager-smtp-access
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: alertmanager
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        # This value will be automatically replaced.
        cidr: 255.255.255.255/32

---
# Pods in the monitoring namespace only need to be able to receive
# connections from pods in the same namespace. The only exception from
# this rule are Grafana's, Alertmanager's, and Prometheus's pods.
#
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: namespace-only-ingress
spec:
  policyTypes:
    - Ingress
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}

---
# Grafana's HTTP port is exposed to simple-git-server's proxy.
#
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-graphana-ingress
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: prometheus
      app.kubernetes.io/name: grafana
  ingress:
    - ports:
        - port: grafana
          protocol: TCP
      from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: simple-git-server

---
# Alertmanager's HTTP port is exposed to simple-git-server's proxy.
#
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-alertmanager-ingress
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: prometheus-kube-prometheus-alertmanager
      app.kubernetes.io/name: alertmanager
  ingress:
    - ports:
        - port: http-web
          protocol: TCP
      from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: simple-git-server

---
# Prometheus's HTTP port is exposed to simple-git-server's proxy.
#
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-ingress
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  ingress:
    - ports:
        - port: http-web
          protocol: TCP
      from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: simple-git-server
